fix-input-alignment: Consistent padding

--- a/input/assets/css/_login-box.scss
+++ b/input/assets/css/_login-box.scss
@@ -32,7 +32,6 @@
   }
   input {
     width: 100%;
-    padding: 5px 10px;
   }
 }
 .login-box-remember-me {
